Fixed iFrame overflow on small screen

--- a/css/contact.css
+++ b/css/contact.css
@@ -94,4 +94,8 @@ input:focus, textarea:focus{
         max-width: 100%;
         text-align: justify;
     }
+    iframe {
+        max-width: 95vw;
+        margin: 0 auto;
+    }
 }
